--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "bootstrap": "^4.0.0-beta.2",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.7"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-watch": "^4.3.11"
   }
 }
