--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@uirouter/angularjs": "^1.0.10",
     "angular": "^1.6.6",
     "bootstrap": "^4.0.0-beta.2",
-    "jquery": "^3.2.1",
-    "popper.js": "^1.12.7"
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
