--- a/package.json
+++ b/package.json
@@ -16,12 +16,7 @@
     "url": "https://github.com/lucianojsjr/uns/issues"
   },
   "homepage": "https://github.com/lucianojsjr/uns#readme",
-  "dependencies": {
-    "@uirouter/angularjs": "^1.0.10",
-    "angular": "^1.6.6",
-    "bootstrap": "^4.0.0-beta.2",
-    "jquery": "^3.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
