--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "1.6.6",
     "jquery": "^3.2.1",
     "materialize": "^0.100.2",
-    "angular-ui-router": "^1.0.11"
+    "angular-ui-router": "^1.0.11",
+    "angular-bootstrap": "^2.5.0"
   }
 }
