--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "^3.2.1",
     "materialize": "^0.100.2",
     "angular-ui-router": "^1.0.11",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "print-js": "^1.0.29"
   }
 }
